testdata/asm/invalid/basic_04.zkasm
;;error:3:9-10:unknown register or constant
fn f(x u16) -> (res u2) {
  res = y
  return
}
